tests/neg/i7013c.scala
import quoted._

def foo()(using QuoteContext) = {
  type C
  '[C] // error
}
